--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.4",
     "bootstrap": "5.1.3",
+    "browser-sync-client": "^2.27.9",
     "dayjs": "1.11.0",
     "ngx-infinite-scroll": "13.0.1",
     "ngx-webstorage": "9.0.0",
@@ -107,7 +108,7 @@
     "@types/node": "16.11.26",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
-    "browser-sync": "2.27.9",
+    "browser-sync": "^2.27.9",
     "browser-sync-webpack-plugin": "2.3.0",
     "concurrently": "7.0.0",
     "copy-webpack-plugin": "10.2.4",
